<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/TxtOperacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LblOpcion"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />


    <Button
        android:id="@+id/BtnResta"
        android:layout_width="60sp"
        android:layout_height="80sp"
        android:text="@string/BtnResta"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toEndOf="@+id/BtnDivision"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146"/>

    <Button
        android:id="@+id/BtnSuma"
        android:layout_width="60sp"
        android:layout_height="80sp"
        android:text="@string/BtnSuma"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <Button
        android:id="@+id/BtnMultiplicacion"
        android:layout_width="70sp"
        android:layout_height="80sp"
        android:text="@string/BtnMultiplicacion"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/BtnSuma"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <Button
        android:id="@+id/BtnDivision"
        android:layout_width="60sp"
        android:layout_height="80sp"
        android:text="@string/BtnDivision"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"

        app:layout_constraintStart_toEndOf="@+id/BtnMultiplicacion"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/LblEnunciado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LblQtyKilograms"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <EditText
        android:id="@+id/Txtnum2"
        android:layout_width="130dp"
        android:layout_height="71dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Txtnum2hint"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/Txtnum1"
        app:layout_constraintTop_toBottomOf="@+id/LblEnunciado"
        app:layout_constraintVertical_bias="0.055" />

    <Button
        android:id="@+id/BtnCalcular"
        android:layout_width="280sp"
        android:layout_height="60sp"
        android:text="@string/BtnConvert"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Txtnum1"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/LblResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Resultado"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnCalcular"

        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/lblSigno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="..."
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/BtnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Txtnum1"
        android:layout_width="131dp"
        android:layout_height="73dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Txtnum1hint"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Txtnum2"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LblEnunciado"
        app:layout_constraintVertical_bias="0.055" />


</androidx.constraintlayout.widget.ConstraintLayout>